<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActionBar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="action_location_found">Location</string>
    <string name="action_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_undo">Undo</string>
    <string name="ui_tabname_category19">cat19</string>
    <string name="ui_tabname_category20">cat20</string>
    

</resources>
