
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_location_found"
          android:icon="@drawable/ic_action_location_found"
          android:title="@string/action_location_found"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_refresh"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_help"
          android:icon="@drawable/ic_action_help"
          android:title="@string/action_help"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_undo"
          android:icon="@drawable/ic_action_undo"
          android:title="@string/action_undo"
          android:showAsAction="ifRoom" />

    
</menu>
